added fwave optimization

--- a/docs/source/files/assignments/08.rst
+++ b/docs/source/files/assignments/08.rst
@@ -571,6 +571,27 @@ Code snippets of the implementation:
     [...]
     }
 
+F-Wave solver optimization  
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+In ``computeEigencoefficients``, we changed
+
+.. code:: cpp
+
+  t_real l_rInv[2][2] = {{0}};
+  l_rInv[0][0] = l_detInv * eigenvalueRoe_2;
+  l_rInv[0][1] = -l_detInv;
+  l_rInv[1][0] = -l_detInv * eigenvalueRoe_1;
+  l_rInv[1][1] = l_detInv;
+
+to 
+
+.. code:: cpp
+
+  t_real l_rInv[2][2] = {{l_detInv * eigenvalueRoe_2, -l_detInv}, {-l_detInv * eigenvalueRoe_1, l_detInv}};
+
+in order to skip the unnecessary step of initializing the array to 0.
+
 Coarse Output optimization
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
