add pictures and update documentation for 8.3

--- a/docs/source/files/assignments/08.rst
+++ b/docs/source/files/assignments/08.rst
@@ -509,6 +509,45 @@ could not be vectorized:
 8.3 Instrumentation and Performance Counters
 ==============================================
 
+8.3.1 VTune
+_______________
+
+For this part we used Intel VTune.
+First we used the gui to specify our reports.
+
+Then we used the following batch script to run the hotspots measurement:
+
+.. code:: text
+  
+  #!/bin/bash
+  #SBATCH --job-name=vTune
+  #SBATCH --output=vTune.out
+  #SBATCH --error=vTune.err
+  #SBATCH --partition=s_hadoop
+  #SBATCH --nodes=1
+  #SBATCH --ntasks=1
+  #SBATCH --time=10:00:00
+  #SBATCH --cpus-per-task=72
+
+  module load compiler/intel/2020-Update2
+
+  /cluster/intel/vtune_profiler_2020.2.0.610396/bin64/vtune -collect hotspots -app-working-dir /beegfs/xe63nel/tsunami_lab/build -- /beegfs/xe63nel/tsunami_lab/build/tsunami_lab ../configs/config.json
+
+
+**Hotspots**
+
+..  image:: ../../_static/assets/task_8-3-1_hotspot.png
+
+
+**Threads**
+
+..  image:: ../../_static/assets/task_8-3-1_threads.png
+
+..  image:: ../../_static/assets/task_8-3-1_threads_chart.png
+
+The poor result for the thread report was expected, because we obviously only compute sequentially.
+
+
 
 8.3.5 - Code optimizations
 ---------------------------
